Fix modal close button z-index

--- a/src/components/modal/styles.module.scss
+++ b/src/components/modal/styles.module.scss
@@ -73,6 +73,7 @@
 .close {
     @include reset-button;
     position: absolute;
+    z-index: 9;
     top: 0;
     right: 0;
     width: px-to-rem(36);
